--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/outstylr-2.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/outstylr-2.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/outstylr-2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OutStylr</title>
   </head>
